--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-live",
-  "description": " vue-live",
+  "description": "Календарь",
   "version": "1.0.0",
   "author": "Nicolay <nic.nic343@ya.ru>",
   "license": "MIT",
