--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "vue": "^2.5.11",
-    "vue-event-calendar": "^1.5.2"
+    "vue-event-calendar": "^1.5.2",
+    "vue-resource": "^1.5.0"
   },
   "browserslist": [
     "> 1%",
